--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
@@ -20,6 +20,9 @@
 
 	aliases {
 		serial0 = &uart_B;
+		tsensor0 = &cpu_tsensor;
+		tsensor1 = &nna_tsensor;
+		tsensor2 = &vpu_tsensor;
 	};
 
 	memory@00000000 {
