storage: enable pio mode. [1/1]
PD#SWPL-46964

Problem:
enable pio mode

Solution:
enable pio mode

Verify:
T7

Change-Id: Iffcb109dfc0da0162f9c57d7dae6951d35545531
Signed-off-by: Long Yu <long.yu@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/t3_pxp.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_pxp.dts
@@ -845,6 +845,7 @@
 
 	non-removable;
 	disable-wp;
+	amlogic,dram-access-quirk;
 
 	cd-gpios = <&gpio GPIOC_6 GPIO_ACTIVE_HIGH>;
 	//dat1-gpios = <&gpio GPIOC_1 GPIO_ACTIVE_HIGH>;
@@ -866,6 +867,7 @@
 	max-frequency = <200000000>;
 	non-removable;
 	disable-wp;
+	amlogic,dram-access-quirk;
 
 //	mmc-pwrseq = <&emmc_pwrseq>;
 //	vmmc-supply = <&vddao_3v3>;
