dtv_demod: t3 bringup [1/1]
PD#SWPL-47077

Problem:
t3 bringup

Solution:
1.t3 bringup
2.dtv demod.
3.tuner dts config.
4.demux dts config.
5.atv demod dts config(status: disabled).

Verify:
verified by t3

Change-Id: I11556022d76db742c8ff47cbb921b85bf9d5d925
Signed-off-by: zhiwei.yuan <zhiwei.yuan@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -195,6 +195,14 @@
 		#mbox-cells = <1>;
 	};
 
+	adc: adc {
+		compatible = "amlogic, adc-t3";
+		status = "okay";
+		reg = <0x0 0xfe072000 0x0 0x2000/* afe reg base */
+			0x0 0xfe008000 0x0 0x2000/* hiu base */
+			>;
+	};
+
 	vddcpu0: pwm_b-regulator {
 		compatible = "pwm-regulator";
 		pwms = <&pwm_ab MESON_PWM_1 1500 0>;
