--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
@@ -709,6 +709,44 @@
 	};
 	/* Audio Related end */
 
+	tvafe_avin_detect {
+		compatible = "amlogic, t3_tvafe_avin_detect";
+		status = "disabled";
+		device_mask = <1>;/*bit0:ch1;bit1:ch2*/
+		interrupts = <0 12 1>,
+				<0 13 1>;
+	};
+
+	tvafe {
+		compatible = "amlogic, tvafe-t3";
+		/*memory-region = <&tvafe_cma_reserved>;*/
+		status = "okay";
+		flag_cma = <1>;/*1:share with codec_mm;0:cma alone*/
+		cma_size = <5>;/*MByte*/
+		reg = <0x0 0xfe072000 0x0 0x2000/*tvafe reg base*/
+			0x0 0xfe008000 0x0 0x2000>; /*hiu reg base*/
+		reserve-iomap = "true";
+		tvafe_id = <0>;
+		//pinctrl-names = "default";
+		/*!!particular sequence, no more and no less!!!*/
+		tvafe_pin_mux = <
+				3 /* TVAFE_CVBS_IN2, CVBS_IN0 = 0 */
+				1 /* TVAFE_CVBS_IN0, CVBS_IN1 */
+				2 /* TVAFE_CVBS_IN1, CVBS_IN2 */
+				4 /* TVAFE_CVBS_IN3, CVBS_IN3 */
+		>;
+		clocks = <&clkc CLKID_CDAC_CLK>;
+		clock-names = "vdac_clk_gate";
+		cutwindow_val_h = <0 0 0 0 8>; /* level 0~4 */
+		cutwindow_val_v = <4 8 14 16 24>;  /* level 0~4 */
+	};
+
+	vbi {
+		compatible = "amlogic, vbi";
+		status = "disabled";
+		interrupts = <0 83 1>;
+	};
+
 	aml_frc {
 		compatible = "amlogic, t3_frc";
 		dev_name = "aml_frc";
