--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -596,20 +596,18 @@
 		vclk_serve: vclk_serve {
 			compatible = "amlogic, vclk_serve";
 			status = "okay";
-			reg = <0x0 0xfe008000 0x0 0x300    /* ana reg */
+			reg = <0x0 0xfe008000 0x0 0x400    /* ana reg */
 				0x0 0xfe000000 0x0 0x4a0>; /* clk reg */
+		};
+
+		vout_mux: vout_mux {
+			compatible = "amlogic, vout_mux-t3";
+			status = "okay";
 		};
 
 		vout: vout {
 			compatible = "amlogic, vout";
 			status = "okay";
-
-			/* fr_policy:
-			 *    0: disable
-			 *    1: nearby (only for 60->59.94 and 30->29.97)
-			 *    2: force (60/50/30/24/59.94/23.97)
-			 */
-			fr_policy = <2>;
 		};
 
 		/* Sound iomap */
