audio: modify audio driver on dts file for t3 chip [1/1]
PD#SWPL-47194

Problem:
modify audio driver on dts file for t3 chip

Solution:
modify audio driver on dts file for t3 chip

Verify:
t3-ar301

Change-Id: I5cc93f3ff26a0e82d79b1f532d58738df1d72209
Signed-off-by: zirui.xiao <zirui.xiao@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1313,6 +1313,20 @@
 		};
 	};
 
+	spdifout_z: spdifout_z {
+		mux { /* GPIOZ_19 */
+			groups = "spdif_out_z19";
+			function = "spdif_out";
+		};
+	};
+
+	spdifout_z_mute: spdifout_z_mute {
+		 mux { /* GPIOZ_19 */
+			groups = "GPIOZ_19";
+			function = "gpio_periphs";
+			output-low;
+		};
+	};
 };
 
 &gpu{
