--- a/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t965d4_ar321.dts
@@ -322,7 +322,7 @@
 			 * frame-master = <&tdmacodec>;
 			 */
 			/* suffix-name, sync with android audio hal used for */
-			suffix-name = "alsaPORT-i2s";
+			suffix-name = "alsaPORT-pcm";
 			cpu {
 				sound-dai = <&tdma>;
 				dai-tdm-slot-tx-mask = <1 1>;
@@ -351,7 +351,7 @@
 			//bitclock-master = <&tdmbcodec>;
 			//frame-master = <&tdmbcodec>;
 			/* suffix-name, sync with android audio hal used for */
-			suffix-name = "alsaPORT-pcm";
+			suffix-name = "alsaPORT-i2s";
 			cpu {
 				sound-dai = <&tdmb>;
 				dai-tdm-slot-tx-mask = <1 1>;
@@ -488,21 +488,32 @@
 
 &audiobus {
 	tdma:tdm@0 {
-		compatible = "amlogic, t5-snd-tdma";
+		compatible = "amlogic, t7-snd-tdma";
 		#sound-dai-cells = <0>;
 
 		dai-tdm-lane-slot-mask-in = <1 0>;
-		dai-tdm-lane-slot-mask-out = <0 1>;
+		dai-tdm-lane-slot-mask-out = <1 1>;
 		dai-tdm-clk-sel = <0>;
 
 		clocks = <&clkaudio CLKID_AUDIO_MCLK_A
-				&clkaudio CLKID_AUDIO_MCLK_PAD0
-				&clkc CLKID_MPLL0
-				&clkc CLKID_MPLL1
-				&clkaudio CLKID_AUDIO_SPDIFOUT_A>;
-		clock-names = "mclk", "mclk_pad", "clk_srcpll",
-			"samesource_srcpll", "samesource_clk";
+				&clkc CLKID_MPLL0>;
+		clock-names = "mclk", "clk_srcpll";
 
+		status = "okay";
+	};
+
+	tdmb:tdm@1 {
+		compatible = "amlogic, t7-snd-tdmb";
+		#sound-dai-cells = <0>;
+
+		dai-tdm-lane-slot-mask-in = <1 0 0 0>;
+		dai-tdm-lane-slot-mask-out = <1 1 1 1>;
+		dai-tdm-clk-sel = <1>;
+
+		clocks = <&clkaudio CLKID_AUDIO_MCLK_B
+				&clkaudio CLKID_AUDIO_MCLK_PAD0
+				&clkc CLKID_MPLL1>;
+		clock-names = "mclk", "mclk_pad", "clk_srcpll";
 		//pinctrl-names = "tdm_pins";
 		//pinctrl-0 = <&tdm_a>;
 
@@ -531,23 +542,8 @@
 		};
 	};
 
-	tdmb:tdm@1 {
-		compatible = "amlogic, t5-snd-tdmb";
-		#sound-dai-cells = <0>;
-
-		dai-tdm-lane-slot-mask-in = <1 0 0 0>;
-		dai-tdm-lane-slot-mask-out = <0 1 0 0>;
-		dai-tdm-clk-sel = <1>;
-
-		clocks = <&clkaudio CLKID_AUDIO_MCLK_B
-				&clkc CLKID_MPLL1>;
-		clock-names = "mclk", "clk_srcpll";
-
-		status = "okay";
-	};
-
 	tdmc:tdm@2 {
-		compatible = "amlogic, t5-snd-tdmc";
+		compatible = "amlogic, t7-snd-tdmc";
 		#sound-dai-cells = <0>;
 
 		dai-tdm-lane-slot-mask-in = <1 0 0 0>;
@@ -600,9 +596,9 @@
 				<GIC_SPI 35 IRQ_TYPE_EDGE_RISING>;
 
 		interrupt-names = "irq_spdifin";
-		//pinctrl-names = "spdif_pins", "spdif_pins_mute";
-		//pinctrl-0 = <&spdifout>;
-		//pinctrl-1 = <&spdifout_a_mute>;
+		pinctrl-names = "spdif_pins", "spdif_pins_mute";
+		pinctrl-0 = <&spdifout_z>;
+		pinctrl-1 = <&spdifout_z_mute>;
 
 		samesource_sel = <4>;
 
@@ -625,7 +621,7 @@
 	};
 
 	extn:extn {
-		compatible = "amlogic, tm2-snd-extn";
+		compatible = "amlogic, t7-snd-extn";
 		#sound-dai-cells = <0>;
 
 		interrupts =
