--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar319.dts
@@ -6,6 +6,7 @@
 /dts-v1/;
 
 #include "mesont3.dtsi"
+#include "partition_mbox.dtsi"
 #include "mesont3_pxp-panel.dtsi"
 #include "mesong12a-bifrost.dtsi"
 
