--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -13,6 +13,9 @@
 #include <dt-bindings/power/t3-pd.h>
 #include <dt-bindings/pwm/pwm.h>
 #include <dt-bindings/pwm/meson.h>
+#include <dt-bindings/input/input.h>
+#include <dt-bindings/input/meson_ir.h>
+#include "meson-ir-map.dtsi"
 #include "mesong12a-bifrost.dtsi"
 / {
 	cpus:cpus {
@@ -391,6 +394,16 @@
 				status = "disabled";
 			};
 
+			ir: ir@8000 {
+				compatible = "amlogic, meson-ir";
+				reg = <0x0 0x84040 0x0 0x44>,
+					<0x0 0x84000 0x0 0x20>;
+				status = "disabled";
+				protocol = <REMOTE_TYPE_NEC>;
+				interrupts = <GIC_SPI 22 IRQ_TYPE_EDGE_RISING>;
+				map = <&custom_maps>;
+				max_frame_time = <200>;
+			};
 		};
 
 		sd_emmc_c: mmc@fe08c000 {
@@ -457,7 +470,7 @@
 //			mmc_debug_flag;
 //			//resets = <&reset RESET_SD_EMMC_A>;
 //		};
-//	};
+
 		dummy_codec:dummy{
 			#sound-dai-cells = <0>;
 			compatible = "amlogic, aml_dummy_codec";
@@ -1106,6 +1119,15 @@
 			function = "pwm_d_hiz";
 		};
 	};
+
+	remote_pins: remote_pin {
+		mux {
+			groups = "remote_input";
+			function = "remote_input";
+			bias-disable;
+		};
+	};
+
 };
 
 &gpu{
