--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1310,6 +1310,66 @@
 		};
 	};
 
+	lcd_vbyone_a_pins: lcd_vbyone_a_pin {
+		mux {
+			groups = "vx1_lockn","vx1_htpdn";
+			function = "vx1";
+		};
+	};
+
+	lcd_vbyone_a_off_pins: lcd_vbyone_a_off_pin {
+		mux {
+			groups = "GPIOH_0","GPIOH_8";
+			function = "gpio_periphs";
+			input-enable;
+		};
+	};
+
+	lcd_tcon_p2p_pins: lcd_tcon_p2p_pin {
+		mux {
+			groups = "tcon_1","tcon_2","tcon_3",
+				"tcon_4","tcon_5","tcon_6",
+				"tcon_lock";
+			function = "tcon";
+		};
+	};
+
+	lcd_tcon_p2p_usit_pins: lcd_tcon_p2p_usit_pin {
+		mux {
+			groups = "tcon_1","tcon_2","tcon_3",
+				"tcon_4","tcon_5","tcon_6",
+				"tcon_sfc_h0";
+			function = "tcon";
+		};
+	};
+
+	lcd_tcon_p2p_off_pins: lcd_tcon_p2p_off_pin {
+		mux {
+			groups = "GPIOH_1","GPIOH_2","GPIOH_3",
+				"GPIOH_4","GPIOH_5","GPIOH_6",
+				"GPIOH_0";
+				function = "gpio_periphs";
+			input-enable;
+		};
+	};
+
+	lcd_tcon_mlvds_pins: lcd_tcon_mlvds_pin {
+		mux {
+			groups = "tcon_0","tcon_1","tcon_2","tcon_3",
+				"tcon_4","tcon_5","tcon_6";
+			function = "tcon";
+		};
+	};
+
+	lcd_tcon_mlvds_off_pins: lcd_tcon_mlvds_off_pin {
+		mux {
+			groups = "GPIOH_0","GPIOH_1","GPIOH_2","GPIOH_3",
+				"GPIOH_4","GPIOH_5","GPIOH_6";
+			function = "gpio_periphs";
+			input-enable;
+		};
+	};
+
 	remote_pins: remote_pin {
 		mux {
 			groups = "remote_input";
