--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar301.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar301.dts
@@ -7,7 +7,7 @@
 
 #include "mesont3.dtsi"
 #include "partition_mbox.dtsi"
-#include "mesont3_pxp-panel.dtsi"
+#include "mesont3_ar301-panel.dtsi"
 #include "mesong12a-bifrost.dtsi"
 
 / {
@@ -1025,8 +1025,30 @@
 	};
 };
 
+&periphs_pinctrl {
+	/*backlight*/
+	bl_pwm_vs_on_pins:bl_pwm_vs_on_pin {
+		mux {
+			groups = "pwm_d_h12";
+			function = "pwm_vs";
+		};
+	};
+	bl_pwm_off_pins:bl_pwm_off_pin {
+		mux {
+			groups = "GPIOH_12";
+			function = "gpio_periphs";
+			output-low;
+		};
+	};
+};
+
+&pwm_cd {
+	status = "okay";
+};
+
 &ir {
 	status = "okay";
 	pinctrl-0 = <&remote_pins>;
 	pinctrl-names = "default";
 };
+
