--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar301_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar301_1g.dts
@@ -7,7 +7,7 @@
 
 #include "mesont3.dtsi"
 #include "partition_mbox.dtsi"
-#include "mesont3_pxp-panel.dtsi"
+#include "mesont3_ar301-panel.dtsi"
 #include "mesong12a-bifrost.dtsi"
 
 / {
@@ -974,6 +974,27 @@
 		reg_mask = <0x21>;
 		reg_bit = <1>;
 	};
+};
+
+&periphs_pinctrl {
+	/*backlight*/
+	bl_pwm_vs_on_pins:bl_pwm_vs_on_pin {
+		mux {
+			groups = "pwm_d_h12";
+			function = "pwm_vs";
+		};
+	};
+	bl_pwm_off_pins:bl_pwm_off_pin {
+		mux {
+			groups = "GPIOH_12";
+			function = "gpio_periphs";
+			output-low;
+		};
+	};
+};
+
+&pwm_cd {
+	status = "okay";
 };
 
 &ir {
