--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar309.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar309.dts
@@ -7,7 +7,7 @@
 
 #include "mesont3.dtsi"
 #include "partition_mbox.dtsi"
-#include "mesont3_pxp-panel.dtsi"
+#include "mesont3_skt-panel.dtsi"
 #include "mesong12a-bifrost.dtsi"
 
 / {
