dts: compiled the 1G dts for ar301&ar309 [1/1]
PD#SWPL-46973

Problem:
1g dts for ar301&ar309 is not compiled

Solution:
compiled the 1G dts for ar301&ar309

Verify:
ar301

Change-Id: I0a4021149e9c5b4d3f2fa536e3d0ab5df9d7e35e
Signed-off-by: Xingyu Chen <xingyu.chen@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/Makefile
+++ b/arch/arm64/boot/dts/amlogic/Makefile
@@ -42,3 +42,5 @@ dtb-y += t3_t965d4_ar331.dtb
 dtb-y += t3_t982_ar301.dtb
 dtb-y += t3_t982_ar309.dtb
 dtb-y += t3_t965d4_ar321.dtb
+dtb-y += t3_t982_ar301_1g.dtb
+dtb-y += t3_t982_ar309_1g.dtb
