storage: enable pio mode for ar301_1g and ar309_1g. [1/1]
PD#SWPL-46964

Problem:
enable pio mode

Solution:
enable pio mode

Verify:
T7

Change-Id: Ie3f0510d43756e182845c59c5b780705dabc0865
Signed-off-by: Xingyu Chen <xingyu.chen@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar301_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar301_1g.dts
@@ -854,6 +854,8 @@
 	//dat1-gpios = <&gpio GPIOC_1 GPIO_ACTIVE_HIGH>;
 	//vmmc-supply = <&vddao_3v3>;
 	//vqmmc-supply = <&emmc_1v8>;
+
+	amlogic,dram-access-quirk;
 };
 
 &sd_emmc_c {
@@ -874,6 +876,8 @@
 //	mmc-pwrseq = <&emmc_pwrseq>;
 //	vmmc-supply = <&vddao_3v3>;
 //	vqmmc-supply = <&vddao_1v8>;
+
+	amlogic,dram-access-quirk;
 };
 
 &gpu{
