--- a/arch/arm64/boot/dts/amlogic/meson-g12-common.dtsi
+++ b/arch/arm64/boot/dts/amlogic/meson-g12-common.dtsi
@@ -2334,7 +2334,7 @@
 			};
 
 			i2c_AO: i2c@5000 {
-				compatible = "amlogic,meson-axg-i2c";
+				compatible = "amlogic,meson-i2c";
 				status = "disabled";
 				reg = <0x0 0x05000 0x0 0x20>;
 				interrupts = <GIC_SPI 195 IRQ_TYPE_EDGE_RISING>;
@@ -2503,7 +2503,7 @@
 			};
 
 			i2c3: i2c@1c000 {
-				compatible = "amlogic,meson-axg-i2c";
+				compatible = "amlogic,meson-i2c";
 				status = "disabled";
 				reg = <0x0 0x1c000 0x0 0x20>;
 				interrupts = <GIC_SPI 39 IRQ_TYPE_EDGE_RISING>;
@@ -2513,7 +2513,7 @@
 			};
 
 			i2c2: i2c@1d000 {
-				compatible = "amlogic,meson-axg-i2c";
+				compatible = "amlogic,meson-i2c";
 				status = "disabled";
 				reg = <0x0 0x1d000 0x0 0x20>;
 				interrupts = <GIC_SPI 215 IRQ_TYPE_EDGE_RISING>;
@@ -2523,7 +2523,7 @@
 			};
 
 			i2c1: i2c@1e000 {
-				compatible = "amlogic,meson-axg-i2c";
+				compatible = "amlogic,meson-i2c";
 				status = "disabled";
 				reg = <0x0 0x1e000 0x0 0x20>;
 				interrupts = <GIC_SPI 214 IRQ_TYPE_EDGE_RISING>;
@@ -2533,7 +2533,7 @@
 			};
 
 			i2c0: i2c@1f000 {
-				compatible = "amlogic,meson-axg-i2c";
+				compatible = "amlogic,meson-i2c";
 				status = "disabled";
 				reg = <0x0 0x1f000 0x0 0x20>;
 				interrupts = <GIC_SPI 21 IRQ_TYPE_EDGE_RISING>;
