dts: enable videotunnel for t3 [1/1]
PD#SWPL-47553

Problem:
bringup videotunnel for t3

Solution:
enable videotunnel dts for t3

Verify:
t3

Change-Id: I08152c811c721034a93dde9a1aaa219156e6d783
Signed-off-by: baocheng sun <baocheng.sun@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -741,6 +741,11 @@
 		reg = <0x0 0xfe036048 0x0 0x2000>;
 	};
 
+	meson_videotunnel{
+		compatible = "amlogic, meson_videotunnel";
+		status = "okay";
+	};
+
 	rdma {
 		compatible = "amlogic, meson-t7, rdma";
 		status = "okay";
