--- a/arch/arm64/boot/dts/amlogic/mesont3_ar301-panel.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3_ar301-panel.dtsi
@@ -11,6 +11,12 @@
 		mode = "tv";
 		fr_auto_policy = <0>; /* 0=disable, 1=60/50hz, 2=60/50/48hz */
 		key_valid = <0>;
+		clocks = <&clkc CLKID_SYS_CLK_TCON
+				&clkc CLKID_FCLK_DIV5
+				&clkc CLKID_CTS_TCON_PLL_CLK>;
+		clock-names = "tcon_gate",
+				"fclk_div5",
+				"clk_tcon";
 		reg = <0x0 0xfe3b0000 0x0 0xd000    /* tcon */
 			0x0 0xfe004000 0x0 0x70>;  /* periphs */
 		interrupts = <0 197 1
@@ -212,6 +218,193 @@
 				0 0 0 500   /*panel power*/
 				0xff 0 0 0>; /*ending*/
 			backlight_index = <0>;
+		};
+		p2p_0{
+			model_name = "p2p_ceds";
+			interface = "p2p"; /*lcd_interface
+					    *(lvds, vbyone, minilvds, p2p)
+					    */
+			basic_setting = <
+				3840 2160 /*h_active, v_active*/
+				5000 2250 /*h_period, v_period*/
+				8     /*lcd_bits */
+				16 9>; /*screen_widht, screen_height*/
+			range_setting = <
+				4240 5100 /*h_period_min, max*/
+				2200 2760 /*v_period_min, max*/
+				480000000 624000000>; /*pclk_min, max*/
+			lcd_timing = <
+				16 29 0  /*hs_width, hs_bp, hs_pol*/
+				6  65 0>; /*vs_width, vs_bp, vs_pol*/
+			clk_attr = <
+				2 /*fr_adj_type
+				   *(0=clk, 1=htotal, 2=vtotal, 3=auto_range,
+				   * 4=hdmi_mode)
+				   */
+				3 /*clk_ss_level*/
+				1 /*clk_auto_generate*/
+				0>; /*pixel_clk(unit in Hz)*/
+			p2p_attr = <
+				0x0  /* p2p_teyp:
+				      *  0x0=ceds, 0x1=cmpi, 0x2=isp, 0x3=epi,
+				      *  0x10=chpi, 0x11=cspi, 0x12=usit
+				      */
+				12 /* channel_num */
+				0x76543210 /* channel_sel0 */
+				0xba98   /* channel_sel1 */
+				0   /* pn_swap */
+				0>; /* bit_swap */
+			phy_attr=<0x5 1>; /* vswing_level, preem_level */
+
+			/* power step: type, index, value, delay(ms) */
+			power_on_step = <
+				0 0 1 20 /*panel power on*/
+				3 0 0 200 /* extern init voltage */
+				2 0 0 10  /*signal enable*/
+				0xff 0 0 0>; /*ending*/
+			power_off_step = <
+				2 0 0 10 /*signal disable*/
+				0 0 0 100 /*panel power off*/
+				0xff 0 0 0>; /*ending*/
+			backlight_index = <0xff>;
+		};
+		p2p_1{
+			model_name = "p2p_cspi";
+			interface = "p2p"; /*lcd_interface
+					    *(lvds, vbyone, minilvds, p2p)
+					    */
+			basic_setting = <
+				3840 2160 /*h_active, v_active*/
+				5000 2250 /*h_period, v_period*/
+				8     /*lcd_bits */
+				16 9>; /*screen_widht, screen_height*/
+			range_setting = <
+				4240 5100 /*h_period_min, max*/
+				2200 2760 /*v_period_min, max*/
+				480000000 624000000>; /*pclk_min, max*/
+			lcd_timing = <
+				16 29 0  /*hs_width, hs_bp, hs_pol*/
+				6  65 0>; /*vs_width, vs_bp, vs_pol*/
+			clk_attr = <
+				2 /*fr_adj_type
+				   *(0=clk, 1=htotal, 2=vtotal, 3=auto_range,
+				   * 4=hdmi_mode)
+				   */
+				3 /*clk_ss_level*/
+				1 /*clk_auto_generate*/
+				0>; /*pixel_clk(unit in Hz)*/
+			p2p_attr = <
+				0x11  /* p2p_teyp:
+				      *  0x0=ceds, 0x1=cmpi, 0x2=isp, 0x3=epi,
+				      *  0x10=chpi, 0x11=cspi, 0x12=usit
+				      */
+				12 /* channel_num */
+				0x76543210 /* channel_sel0 */
+				0xba98   /* channel_sel1 */
+				0   /* pn_swap */
+				0>; /* bit_swap */
+			phy_attr=<0x5 1>; /* vswing_level, preem_level */
+
+			/* power step: type, index, value, delay(ms) */
+			power_on_step = <
+				0 0 1 20 /*panel power on*/
+				2 0 0 10  /*signal enable*/
+				0xff 0 0 0>; /*ending*/
+			power_off_step = <
+				2 0 0 10 /*signal disable*/
+				0 0 0 100 /*panel power off*/
+				0xff 0 0 0>; /*ending*/
+			backlight_index = <0xff>;
+		};
+		mlvds_0{
+			model_name = "mlvds_1080p";
+			interface = "minilvds"; /*lcd_interface
+						 *(lvds, vbyone, minilvds, p2p)
+						 */
+			basic_setting = <
+				1920 1080 /*h_active, v_active*/
+				2200 1125 /*h_period, v_period*/
+				8     /*lcd_bits */
+				16 9>; /*screen_widht, screen_height*/
+			range_setting = <
+				2080 2720 /*h_period_min, max*/
+				2200 1125 /*v_period_min, max*/
+				133940000 156000000>; /*pclk_min, max*/
+			lcd_timing = <
+				44 148 0  /*hs_width, hs_bp, hs_pol*/
+				5 30 0>; /*vs_width, vs_bp, vs_pol*/
+			clk_attr = <
+				2 /*fr_adj_type
+				   *(0=clk, 1=htotal, 2=vtotal, 3=auto_range,
+				   * 4=hdmi_mode)
+				   */
+				3 /*clk_ss_level*/
+				1 /*clk_auto_generate*/
+				0>; /*pixel_clk(unit in Hz)*/
+			minilvds_attr = <
+				6 /* channel_num */
+				0x76543210 /* channel_sel0 */
+				0xba98     /* channel_sel1 */
+				0x660 /* clk_phase */
+				0   /* pn_swap */
+				0>; /* bit_swap */
+			phy_attr=<0x3 0>; /* vswing_level, preem_level */
+
+			/* power step: type, index, value, delay(ms) */
+			power_on_step = <
+				0 0 1 20 /*panel power on*/
+				2 0 0 10  /*signal enable*/
+				0xff 0 0 0>; /*ending*/
+			power_off_step = <
+				2 0 0 10 /*signal disable*/
+				0 0 0 100 /*panel power off*/
+				0xff 0 0 0>; /*ending*/
+			backlight_index = <0xff>;
+		};
+		mlvds_1{
+			model_name = "mlvds_768p";
+			interface = "minilvds";/*lcd_interface
+						*(lvds, vbyone, minilvds, p2p)
+						*/
+			basic_setting = <
+				1366 768 /*h_active, v_active*/
+				1560 806 /*h_period, v_period*/
+				8     /*lcd_bits */
+				16 9>; /*screen_widht, screen_height*/
+			range_setting = <
+				1460 2000 /*h_period_min, max*/
+				784 1015 /*v_period_min, max*/
+				50000000 85000000>; /*pclk_min, max*/
+			lcd_timing = <
+				56 64 0  /*hs_width, hs_bp, hs_pol*/
+				3 28 0>; /*vs_width, vs_bp, vs_pol*/
+			clk_attr = <
+				2 /*fr_adj_type
+				   *(0=clk, 1=htotal, 2=vtotal, 3=auto_range,
+				   * 4=hdmi_mode)
+				   */
+				3 /*clk_ss_level*/
+				1 /*clk_auto_generate*/
+				0>; /*pixel_clk(unit in Hz)*/
+			minilvds_attr = <
+				6 /* channel_num */
+				0x76543210 /* channel_sel0 */
+				0xba98     /* channel_sel1 */
+				0x660 /* clk_phase */
+				0   /* pn_swap */
+				0>; /* bit_swap */
+			phy_attr=<0x3 0>; /* vswing_level, preem_level */
+
+			/* power step: type, index, value, delay(ms) */
+			power_on_step = <
+				0 0 1 20 /*panel power on*/
+				2 0 0 10  /*signal enable*/
+				0xff 0 0 0>; /*ending*/
+			power_off_step = <
+				2 0 0 10 /*signal disable*/
+				0 0 0 100 /*panel power off*/
+				0xff 0 0 0>; /*ending*/
+			backlight_index = <0xff>;
 		};
 	};
 
