--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -659,13 +659,13 @@
 		};
 		acodec:codec {
 			#sound-dai-cells = <0>;
-			compatible = "amlogic, tm2_revb_acodec";
-			reg = <0x0 0xff632000 0x0 0x1c>;
-			tdmout_index = <0>;
-			tdmin_index = <0>;
+			compatible = "amlogic, t3_acodec";
+			reg = <0x0 0xfe01a000 0x0 0x1c>;
+			tdmout_index = <1>;
+			tdmin_index = <1>;
 			dat0_ch_sel = <1>;
 
-			status = "disabled";
+			status = "okay";
 		};
 
 		audio_data: audio_data {
