--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar309_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar309_1g.dts
@@ -308,7 +308,7 @@
 		aml-audio-card,name = "AML-AUGESOUND";
 
 		/*avout mute gpio*/
-		//avout_mute-gpios = <&gpio GPIOH_5 GPIO_ACTIVE_HIGH>;
+		avout_mute-gpios = <&gpio GPIOD_6 GPIO_ACTIVE_HIGH>;
 		//spk_mute-gpios = <&gpio GPIOD_2 GPIO_ACTIVE_LOW>;
 
 		interrupts = <GIC_SPI 51 IRQ_TYPE_EDGE_RISING>;
@@ -331,7 +331,7 @@
 			 * frame-master = <&tdmacodec>;
 			 */
 			/* suffix-name, sync with android audio hal used for */
-			suffix-name = "alsaPORT-i2s";
+			suffix-name = "alsaPORT-pcm";
 			cpu {
 				sound-dai = <&tdma>;
 				dai-tdm-slot-tx-mask = <1 1>;
@@ -360,7 +360,7 @@
 			//bitclock-master = <&tdmbcodec>;
 			//frame-master = <&tdmbcodec>;
 			/* suffix-name, sync with android audio hal used for */
-			suffix-name = "alsaPORT-pcm";
+			suffix-name = "alsaPORT-i2s";
 			cpu {
 				sound-dai = <&tdmb>;
 				dai-tdm-slot-tx-mask = <1 1>;
@@ -377,7 +377,7 @@
 				system-clock-frequency = <12288000>;
 			};
 			tdmbcodec: codec {
-				sound-dai = <&dummy_codec>;
+				sound-dai = <&acodec>;
 			};
 		};
 
@@ -526,23 +526,37 @@
 
 &audiobus {
 	tdma:tdm@0 {
-		compatible = "amlogic, t5-snd-tdma";
+		compatible = "amlogic, t7-snd-tdma";
 		#sound-dai-cells = <0>;
 
 		dai-tdm-lane-slot-mask-in = <1 0>;
-		dai-tdm-lane-slot-mask-out = <0 1>;
+		dai-tdm-lane-slot-mask-out = <1 1>;
 		dai-tdm-clk-sel = <0>;
 
 		clocks = <&clkaudio CLKID_AUDIO_MCLK_A
-				&clkaudio CLKID_AUDIO_MCLK_PAD0
-				&clkc CLKID_MPLL0
-				&clkc CLKID_MPLL1
-				&clkaudio CLKID_AUDIO_SPDIFOUT_A>;
-		clock-names = "mclk", "mclk_pad", "clk_srcpll",
-			"samesource_srcpll", "samesource_clk";
+				&clkc CLKID_MPLL0>;
+		clock-names = "mclk", "clk_srcpll";
 
-		//pinctrl-names = "tdm_pins";
-		//pinctrl-0 = <&tdm_a>;
+		status = "okay";
+	};
+
+	tdmb:tdm@1 {
+		compatible = "amlogic, t7-snd-tdmb";
+		#sound-dai-cells = <0>;
+
+		dai-tdm-lane-slot-mask-in = <1 0 0 0>;
+		dai-tdm-lane-slot-mask-out = <1 1 1 1>;
+		dai-tdm-clk-sel = <1>;
+
+		clocks = <&clkaudio CLKID_AUDIO_MCLK_B
+				&clkaudio CLKID_AUDIO_MCLK_PAD0
+				&clkc CLKID_MPLL1>;
+		clock-names = "mclk", "mclk_pad", "clk_srcpll";
+
+		pinctrl-names = "tdm_pins";
+		pinctrl-0 = <&tdm_b_pins
+			&tdm_d0_pins
+			&tdm_clk_pins>;
 
 		/*
 		 * 0: tdmout_a;
@@ -569,23 +583,8 @@
 		};
 	};
 
-	tdmb:tdm@1 {
-		compatible = "amlogic, t5-snd-tdmb";
-		#sound-dai-cells = <0>;
-
-		dai-tdm-lane-slot-mask-in = <1 0 0 0>;
-		dai-tdm-lane-slot-mask-out = <0 1 0 0>;
-		dai-tdm-clk-sel = <1>;
-
-		clocks = <&clkaudio CLKID_AUDIO_MCLK_B
-				&clkc CLKID_MPLL1>;
-		clock-names = "mclk", "clk_srcpll";
-
-		status = "okay";
-	};
-
 	tdmc:tdm@2 {
-		compatible = "amlogic, t5-snd-tdmc";
+		compatible = "amlogic, t7-snd-tdmc";
 		#sound-dai-cells = <0>;
 
 		dai-tdm-lane-slot-mask-in = <1 0 0 0>;
@@ -638,9 +637,9 @@
 				<GIC_SPI 35 IRQ_TYPE_EDGE_RISING>;
 
 		interrupt-names = "irq_spdifin";
-		//pinctrl-names = "spdif_pins", "spdif_pins_mute";
-		//pinctrl-0 = <&spdifout>;
-		//pinctrl-1 = <&spdifout_a_mute>;
+		pinctrl-names = "spdif_pins", "spdif_pins_mute";
+		pinctrl-0 = <&spdifout_z>;
+		pinctrl-1 = <&spdifout_z_mute>;
 
 		samesource_sel = <4>;
 
@@ -663,7 +662,7 @@
 	};
 
 	extn:extn {
-		compatible = "amlogic, tm2-snd-extn";
+		compatible = "amlogic, t7-snd-extn";
 		#sound-dai-cells = <0>;
 
 		interrupts =
@@ -1089,4 +1088,31 @@
 &pcie {
 	reset-gpio = <&gpio GPIOH_22 GPIO_ACTIVE_HIGH>;
 	status = "disable";
+};
+
+&periphs_pinctrl {
+    tdm_b_pins: tdm_b_pin {
+		mux { /* GPIOH_16, GPIOH_15, GPIOH_17 */
+			groups = "tdm_sclk1",
+				"tdm_fs1",
+				"tdm_d0";
+			function = "tdm";
+		};
+	};
+};
+
+&pinctrl_audio {
+	tdm_d0_pins: tdm_d0_pin {
+		mux {
+			groups = "tdm_d0";
+			function = "tdmoutb_lane1";
+		};
+	};
+
+	tdm_clk_pins: tdm_clk_pin {
+		mux {
+			groups = "tdm_sclk1", "tdm_lrclk1";
+			function = "tdm_clk_outb";
+		};
+	};
 };
