amvecm: amvecm t3 bringup [1/1]
PD#SWPL-47567

Problem:
amvecm t3 bringup

Solution:
amvecm t3 bringup

Verify:
t3

Change-Id: I0bd5b1ff15acb5dc9c6c176bcf98ea997da4d067
Signed-off-by: MingLiang Dong <mingliang.dong@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -809,6 +809,13 @@
 		power-domains = <&pwrdm PDID_T3_GE2D>;
 	};
 
+	amlvecm: amlvecm {
+		compatible = "amlogic, vecm-t3";
+		dev_name = "aml_vecm";
+		clocks = <&clkc CLKID_VID_LOCK>;
+		clock-names = "cts_vid_lock_clk";
+	};
+
 	mesonstream {
 		compatible = "amlogic, codec, streambuf";
 		dev_name = "mesonstream";
