USB: T3 USB driver [1/1]
PD#SWPL-46337

Problem:
support USB driver for t3

Solution:
support USB driver for t3

Verify:
test pass on t3

Change-Id: I93c6e93ab020d44ae4e8e056bd03c29a5010d0b2
Signed-off-by: Yue Wang <yue.wang@amlogic.com>

--- a/arch/arm64/boot/dts/amlogic/mesont3.dtsi
+++ b/arch/arm64/boot/dts/amlogic/mesont3.dtsi
@@ -1075,6 +1075,164 @@
 			};
 		};
 	};/*thermal zone end*/
+
+	crg20: crg@fdd00000 {
+		compatible = "amlogic, crg";
+		status = "disabled";
+		reg = <0x0 0xfdd00000 0x0 0x100000>;
+		interrupts = <0 131 4>;
+		usb-phy = <&usb2_phy_v2>, <&usb3_phy_v2>;
+		cpu-type = "gxl";
+		clock-src = "usb3.0";
+		clocks = <&clkc CLKID_SYS_CLK_USB>;
+		clock-names = "crg_general";
+	};
+
+	crg30: crg@fde00000 {
+		compatible = "amlogic, crg";
+		status = "disabled";
+		reg = <0x0 0xfde00000 0x0 0x100000>;
+		interrupts = <0 130 4>;
+		usb-phy = <&usb2_m31_phy>, <&usb3_m31_phy>;
+		cpu-type = "gxl";
+		clock-src = "usb3.0";
+		clocks = <&clkc CLKID_SYS_CLK_USB>;
+		clock-names = "crg_general";
+	};
+
+	usb2_phy_v2: usb2phy@fe03a000 {
+		compatible = "amlogic, amlogic-new-usb2-v2";
+		status = "disable";
+		#phy-cells = <0>;
+		reg = <0x0 0xfe03a020 0x0 0x60
+			0x0 0xFE002000 0x0 0x100
+			0x0 0xfe03e000 0x0 0x2000
+			0x0 0xfe032000 0x0 0x2000
+			0x0 0xfe030000 0x0 0x2000>;
+		pll-setting-1 = <0x09400414>;
+		pll-setting-2 = <0x927E0000>;
+		pll-setting-3 = <0xac5f69e5>;
+		pll-setting-4 = <0xbe18>;
+		pll-setting-5 = <0x7>;
+		pll-setting-6 = <0x78000>;
+		pll-setting-7 = <0xe0004>;
+		pll-setting-8 = <0xe000c>;
+		version = <3>;
+		//power-domains = <&pwrdm PDID_SC2_USB_COMB>;
+		phy20-reset-level-bit = <9>;
+		phy21-reset-level-bit = <3>;
+		phy22-reset-level-bit = <2>;
+		usb-reset-bit = <4>;
+		reset-level = <0x40>;
+		otg-phy-index = <0>;
+		//usb-phy-trim-reg = <0xfe010330>;
+	};
+
+	usb3_phy_v2: usb3phy@fe03a080 {
+		compatible = "amlogic, amlogic-new-usb3-v2";
+		status = "disable";
+		#phy-cells = <0>;
+		reg = <0x0 0xfe03a080 0x0 0x20
+			0x0 0xfe002000 0x0 0x100>;
+		phy-reg = <0xfe02a000>;
+		phy-reg-size = <0x2000>;
+		usb2-phy-reg = <0xfe03a000>;
+		usb2-phy-reg-size = <0x80>;
+		clocks = <&clkc CLKID_PCIE_PLL>;
+		clock-names = "pcie_refpll";
+		interrupts = <0 281 4>;
+		version = <1>;
+	};
+
+	usb2_m31_phy: usb2m31phy {
+		compatible = "amlogic, amlogic-usb2-m31-phy";
+		status = "disable";
+		#phy-cells = <0>;
+	};
+
+	usb3_m31_phy: usb3m31phy {
+		compatible = "amlogic, amlogic-usb3-m31-phy";
+		status = "disable";
+		#phy-cells = <0>;
+		clocks = <&clkc CLKID_PCIE_PLL>;
+		clock-names = "pcie_refpll";
+		phy-reg = <0xfe02a000>;
+		phy-reg-size = <0x2000>;
+	};
+
+	dwc2_a: dwc2_a@fdf00000 {
+		compatible = "amlogic,dwc2";
+		status = "disable";
+		device_name = "dwc2_a";
+		reg = <0x0 0xfdf00000 0x0 0x100000>;
+		interrupts = <0 129 4>;
+		pl-periph-id = <0>; /** lm name */
+		clock-src = "usb0"; /** clock src */
+		port-id = <0>;  /** ref to mach/usb.h */
+		port-type = <2>;        /** 0: otg, 1: host, 2: slave */
+		port-speed = <0>; /** 0: default, high, 1: full */
+		port-config = <0>; /** 0: default */
+		/*0:default,1:single,2:incr,3:incr4,4:incr8,5:incr16,6:disable*/
+		port-dma = <0>;
+		port-id-mode = <0>; /** 0: hardware, 1: sw_host, 2: sw_slave*/
+		usb-fifo = <728>;
+		cpu-type = "v2";
+		phy-reg = <0xfe03a000>;
+		phy-reg-size = <0xa0>;
+		/** phy-interface: 0x0: amlogic phy, 0x1: synopsys phy **/
+		phy-interface = <0x2>;
+		clocks = <&clkc CLKID_SYS_CLK_USB
+			&clkc CLKID_SYS_CLK_USB>;
+		clock-names = "usb_general",
+				"usb1";
+	};
+
+	pcie: pcie@f8000000 {
+		compatible = "amlogic, amlogic-pcie-v2", "snps,dw-pcie";
+		reg = <0x0 0xf8000000 0x0 0x400000
+			0x0 0xfe02c000 0x0 0x2000
+			0x0 0xf8400000 0x0 0x200000
+			0x0 0xfe02a000 0x0 0x2000
+			0x0 0xfe002044 0x0 0x10>;
+		reg-names = "elbi", "cfg", "config", "phy", "reset";
+		interrupts = <GIC_SPI 141 IRQ_TYPE_EDGE_RISING>;
+		#interrupt-cells = <1>;
+		bus-range = <0x0 0xff>;
+		#address-cells = <3>;
+		#size-cells = <2>;
+		interrupt-map-mask = <0 0 0 0>;
+		interrupt-map = <0 0 0 0 &gic GIC_SPI 143 IRQ_TYPE_EDGE_RISING>;
+		device_type = "pci";
+		ranges = <0x81000000 0 0 0 0xf8600000 0x0 0x100000
+			/* downstream I/O */
+			0x82000000 0 0xf8700000 0x0 0xf8700000 0 0x1900000>;
+			/* non-prefetchable memory */
+		num-lanes = <1>;
+		pcie-num = <1>;
+
+		clocks = <&clkc CLKID_PCIE_PLL
+				&clkc CLKID_SYS_CLK_PCIE
+				&clkc CLKID_SYS_CLK_PCIE_PHY
+				&clkc CLKID_PCIE_HCSL>;
+		clock-names = "pcie_refpll",
+				"pcie",
+				"pcie_phy",
+				"pcie_hcsl";
+		/*reset-gpio-type 0:Shared pad(no reset)1:OD pad2:Normal pad*/
+		gpio-type = <2>;
+		pcie-apb-rst-bit = <14>;
+		pcie-phy-rst-bit = <13>;
+		pcie-ctrl-a-rst-bit = <12>;
+		pwr-ctl = <0>;
+		phy-type = <1>;
+		//power-domains = <&pwrdm PDID_SC2_PCIE>;
+		pcie-ctrl-sleep-shift = <15>;
+		pcie-hhi-mem-pd-shift = <26>;
+		pcie-hhi-mem-pd-mask = <0xf>;
+		pcie-ctrl-iso-shift = <15>;
+		status = "disabled";
+	};
+
 };
 
 &periphs_pinctrl {
