--- a/drivers/amlogic/usb/Makefile
+++ b/drivers/amlogic/usb/Makefile
@@ -1,5 +1,6 @@
 obj-$(CONFIG_AMLOGIC_CRG)                            += crg/
 obj-$(CONFIG_AMLOGIC_CRG)                            += crgdrdphy/
+obj-$(CONFIG_AMLOGIC_CRG)                            += crgm31phy/
 obj-$(CONFIG_AMLOGIC_USB_DWC_OTG_HCD)	+= dwc_otg/310/
 obj-$(CONFIG_AMLOGIC_USB2PHY) 		+= usb2phy/
 obj-$(CONFIG_AMLOGIC_USB3PHY) 		+= usb3v2phy/
