--- a/arch/arm64/boot/dts/amlogic/t3_t982_ar309_1g.dts
+++ b/arch/arm64/boot/dts/amlogic/t3_t982_ar309_1g.dts
@@ -20,6 +20,9 @@
 
 	aliases {
 		serial0 = &uart_B;
+		serial1 = &uart_A;
+		serial2 = &uart_C;
+		serial3 = &uart_D;
 		tsensor0 = &cpu_tsensor;
 		tsensor1 = &nna_tsensor;
 		tsensor2 = &vpu_tsensor;
